ingress/ingress-minio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeflow-ingress
  namespace: kubeflow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: mlops.local
    http:
      paths:
      - path: /minio
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 9000
