ingress/mlops-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlops-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: mlops.local
      http:
        paths:
          - path: /mlflow(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mlflow
                port:
                  number: 5000
          - path: /minio(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio-service
                port:
                  number: 9000
          - path: /grafana(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kps-grafana
                port:
                  number: 80
          - path: /kubeflow(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prediction-api
                port:
                  number: 8000
          - path: /metrics(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prediction-api
                port:
                  number: 8001
          - path: /prometheus(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kps-kube-prometheus-stack-prometheus
                port:
                  number: 9090
          - path: /alertmanager(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kps-kube-prometheus-stack-alertmanager
                port:
                  number: 9093
