ingress/ingressgateway-allow-kubeflow.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ingressgateway-allow-kubeflow
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway          # áp dụng cho Pod ingressgateway
  action: ALLOW
  rules:
  - to:
    - operation:
        paths:
        - /kubeflow/*
        - /dex/*
        - /         # tùy chọn, cho phép root nếu centraldashboard redirect về /
